# librmcs

./: .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.build_firmware  Dockerfile.build_sdk  README.md  bmi088-datasheet.md
.devcontainer/: .gitignore  (+2 more)
example/: CMakeLists.txt
example/1.receive_imu_data/: main.cpp
example/2.receive_motor_data/: main.cpp
example/3.closed_loop_motor_velocity/: main.cpp
example/4.use_encapsulated_motor_class/: main.cpp
example/5.custom_reduction_ratio/: main.cpp
example/6.use_encapsulated_pid_class/: main.cpp
example/7.multithreading/: main.cpp
example/8.multithreading_advanced/: main.cpp
example/9.remote_control/: main.cpp
firmware/: .clangd  CMakeLists.txt  CMakePresets.json
firmware/c_board/: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json
firmware/c_board/app/: CMakeLists.txt
firmware/c_board/app/src/: app.cpp  app.hpp
firmware/c_board/app/src/can/: can.cpp  can.hpp
firmware/c_board/app/src/gpio/: gpio.cpp  gpio.hpp
firmware/c_board/app/src/i2c/: i2c.cpp  i2c.hpp
firmware/c_board/app/src/led/: led.hpp
firmware/c_board/app/src/logger/: logger.hpp
firmware/c_board/app/src/spi/: spi.cpp  spi.hpp
firmware/c_board/app/src/timer/: delay.cpp  timer.hpp
firmware/c_board/app/src/uart/: rx_buffer.hpp  tx_buffer.hpp  uart.cpp  uart.hpp
firmware/c_board/app/src/usb/: interrupt_safe_buffer.hpp  usb_descriptors.cpp  usb_descriptors.hpp  vendor.cpp  vendor.hpp
firmware/c_board/app/src/utility/: assert.cpp  boot_mailbox.hpp  interrupt_lock.hpp  lazy.hpp  ring_buffer.hpp
firmware/c_board/bootloader/: CMakeLists.txt
firmware/c_board/bootloader/include/: tusb_config.h
firmware/c_board/bootloader/src/: main.cpp
firmware/c_board/bootloader/src/crypto/: sha256.hpp
firmware/c_board/bootloader/src/flash/: layout.hpp  metadata.hpp  unlock_guard.hpp  validation.hpp  writer.hpp
firmware/c_board/bootloader/src/usb/: dfu.cpp  dfu.hpp  usb_descriptors.cpp  usb_descriptors.hpp
firmware/c_board/bootloader/src/utility/: assert.hpp  boot_mailbox.hpp  jump.hpp
firmware/c_board/bsp/HAL/: .mxproject  CMakeLists.txt  rmcs_slave.ioc  startup_stm32f407xx.s
firmware/c_board/bsp/HAL/cmake/: gcc-arm-none-eabi.cmake
firmware/c_board/bsp/cubemx/: .gitignore  STM32F407XX_BOOTLOADER.ld  rmcs_slave.ioc
firmware/c_board/cmake/: gcc-arm-none-eabi.cmake
firmware/c_board/cubemx/: .gitignore  rmcs_slave.ioc
firmware/c_board/cubemx/Core/Inc/: gpio.h  spi.h  tim.h  usart.h
firmware/c_board/cubemx/Core/Src/: can.c  stm32f4xx_it.c  tim.c  usart.c
firmware/c_board/cubemx/cmake/stm32cubemx/: CMakeLists.txt
firmware/c_board/include/: tusb_config.h
firmware/c_board/src/: app.cpp  app.hpp
firmware/c_board/src/can/: can.cpp  can.hpp
firmware/c_board/src/gpio/: gpio.cpp
firmware/c_board/src/led/: led.hpp
firmware/c_board/src/logger/: logger.hpp
firmware/c_board/src/spi/: spi.cpp  spi.hpp
firmware/c_board/src/spi/bmi088/: accel.hpp  base.hpp  gyro.hpp
firmware/c_board/src/timer/: delay.cpp  delay.hpp
firmware/c_board/src/uart/: uart.cpp  uart.hpp
firmware/c_board/src/usb/: interrupt_safe_buffer.hpp  usb_descriptors.cpp  usb_descriptors.hpp  vendor.cpp  vendor.hpp  wcid.cpp
firmware/c_board/src/utility/: assert.cpp  interrupt_lock.hpp  lazy.hpp
firmware/common/cmake/: librmcs_firmware.cmake
firmware/include/: tusb_config.h
firmware/rmcs_board/: .clangd  CMakeLists.txt  CMakePresets.json
firmware/rmcs_board/app/: CMakeLists.txt
firmware/rmcs_board/app/include/: tusb_config.h
firmware/rmcs_board/app/src/: app.cpp  app.hpp
firmware/rmcs_board/app/src/can/: can.cpp  can.hpp
firmware/rmcs_board/app/src/gpio/: analog_gpio_pin.hpp  gpio.cpp  gpio.hpp  gpio_pin.hpp
firmware/rmcs_board/app/src/i2c/: i2c.cpp  i2c.hpp
firmware/rmcs_board/app/src/led/: led.hpp  ws2812.hpp
firmware/rmcs_board/app/src/spi/: spi.cpp  spi.hpp
firmware/rmcs_board/app/src/timer/: tick.cpp  tick.hpp  timer.cpp  timer.hpp
firmware/rmcs_board/app/src/uart/: tx_buffer.hpp  uart.cpp  uart.hpp
firmware/rmcs_board/app/src/usb/: interrupt_safe_buffer.hpp  uplink_buffer_hook.cpp  usb_descriptors.cpp  usb_descriptors.hpp  vendor.cpp  vendor.hpp
firmware/rmcs_board/app/src/utility/: assert.cpp  boot_mailbox.hpp  lazy.hpp
firmware/rmcs_board/boards/lite/: CMakeLists.txt  board.c  board.h  lite.yaml
firmware/rmcs_board/boards/lite/app/: board_app.cpp  board_app.hpp
firmware/rmcs_board/boards/pro/: CMakeLists.txt  board.c  board.h  pro.yaml
firmware/rmcs_board/boards/pro/app/: board_app.cpp  board_app.hpp
firmware/rmcs_board/bootloader/: CMakeLists.txt
firmware/rmcs_board/bootloader/include/: tusb_config.h
firmware/rmcs_board/bootloader/src/: main.cpp
firmware/rmcs_board/bootloader/src/flash/: layout.hpp  metadata.hpp  validation.hpp  writer.hpp  xpi_nor.hpp
firmware/rmcs_board/bootloader/src/usb/: dfu.cpp  dfu.hpp  usb_descriptors.cpp  usb_descriptors.hpp
firmware/rmcs_board/cmake/: merge_compile_commands.cmake
firmware/rmcs_board/include/: tusb_config.h
firmware/rmcs_board/src/: app.cpp  app.hpp
firmware/rmcs_board/src/can/: can.cpp  can.hpp
firmware/rmcs_board/src/gpio/: gpio.cpp
firmware/rmcs_board/src/spi/: spi.cpp  spi.hpp
firmware/rmcs_board/src/uart/: rx_buffer.hpp  tx_buffer.hpp  uart.cpp  uart.hpp
firmware/rmcs_board/src/usb/: helper.hpp  interrupt_safe_buffer.hpp  usb_descriptors.cpp  usb_descriptors.hpp  vendor.cpp  vendor.hpp
firmware/rmcs_board/src/utility/: assert.cpp  interrupt_lock_guard.hpp  lazy.hpp  ring_buffer.hpp
firmware/src/: app.cpp  app.hpp
firmware/src/can/: can.cpp  can.hpp
firmware/src/gpio/: gpio.cpp
firmware/src/spi/: spi.cpp  spi.hpp
firmware/src/spi/bmi088/: accel.hpp  gyro.hpp
firmware/src/uart/: rx_buffer.hpp  tx_buffer.hpp  uart.cpp  uart.hpp
firmware/src/usb/: cdc.cpp  cdc.hpp  helper.hpp  interrupt_safe_buffer.hpp  usb_descriptors.cpp  usb_descriptors.hpp  vendor.cpp  vendor.hpp
firmware/src/utility/: assert.cpp  interrupt_lock_guard.hpp  lazy.hpp  ring_buffer.hpp
(+128 files in other folders)
